@@ -283,10 +283,6 @@
         <guimenu>Commands</guimenu>&gt;<guisubmenu>Encoding</guisubmenu>
         menu.</para>
 
-        <para>It is also possible to override the encoding for a file in a
-        jEdit "buffer-local" property at the top of the file. See
-        <xref linkend="buffer-local" /> for more details. </para>
-
         <para>Note that there is no general way to auto-detect the encoding used
         by a file, however jEdit supports "encoding detectors", of which there
         are 4 in the core, and others can be provided by plugins through the
@@ -320,6 +316,13 @@
                 Python has its own way of specifying encoding at the top of
                 a file.</para>
                 <programlisting># -*- coding: utf-8 -*-                </programlisting>
+            </listitem>
+            <listitem> <para> <emphasis role="bold">buffer-local-properties</emphasis>:
+                Enable buffer-local properties' syntax
+                (see <xref linkend="buffer-local" />)
+                at the top of the file to specify encoding. </para>
+                <programlisting>#  :encoding=ISO-8859-1:
+                </programlisting>
             </listitem>
 
 
