@@ -4,13 +4,17 @@ jEdit 4.5 version history
 
 {{{ Version 4.5pre2
 
-Thanks to Shlomy Reinstein, Alan Ezust, and Björn "Vampire" Kautler for 
-contributing to this release.
+Thanks to Shlomy Reinstein, Alan Ezust, Jarek Czekalski, and 
+Björn "Vampire" Kautler for contributing to this release.
 
 {{{ Bug Fixes
 
 - Fixed #3163058: middle mouse button paste doesn't respect gutter selection.
   (Shlomy Reinstein)
+
+- ":encoding=...:" was treated as buffer local property and caused
+  confusion about what encoding was used at loading/saving the buffer.
+  (SF.net patch #3434651 - Jarek Czekalski, for bug #1643580)
 
 }}}
 {{{ Miscellaneous
